# example-setup.cfg-only

./: .travis.yml  LICENSE.rst  README.rst  buildout.cfg  requirements.txt  setup.cfg
docs/: index.rst
src/example/package/: __init__.py  configure.zcml  interfaces.py  setuphandlers.py  testing.py  upgrades.py  upgrades.zcml
src/example/package/browser/: configure.zcml
src/example/package/locales/: update.sh
src/example/package/profiles/default/: browserlayer.xml
src/example/package/profiles/uninstall/: browserlayer.xml
src/example/package/tests/: test_robot.py  test_setup.py
src/example/package/tests/robot/: test_example.robot
